fix: caption spacing closes #589

--- a/packages/gatsby-theme-carbon/src/components/Caption/Caption.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/Caption/Caption.module.scss
@@ -1,6 +1,5 @@
 .caption {
   @include carbon--type-style('body-short-01');
-  padding-top: $spacing-05;
   --space: 0;
 }
 
